--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,10 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nanoid": "^4.0.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
